Fixed some alignments

--- a/app/assets/stylesheets/countries.css.scss
+++ b/app/assets/stylesheets/countries.css.scss
@@ -2,7 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .table1{
-	width: 760px;
+	width: 750px;
+	float :left
 }
 
 h4{
